# spongebob-machine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.en.md  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  README.en.md  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
.github/workflows/: pre-commit.yml
data/: image_lists.xlsx
scripts/: init_db.py
src/bot/: __init__.py  keyboards.py  logger.py  main.py  utils.py
src/bot/handlers/: callback.py  message.py  random.py  start.py
src/db/: __init__.py  connection.py  models.py  user_queries.py
src/meme/: __init__.py  dataset.py  scoring.py  selector.py
src/nlp/: __init__.py  embedding.py  intent.py  keyword_expansion.py
tools/: __init__.py  build_embedding.py  import_xlsx.py  label_tool.py
